# snip

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py
app/cache/: redis_client.py
app/db/: base.py  models.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: ad2d46f1f0c5_create_urls_table.py
app/routers/: redirect.py  urls.py
app/schemas/: url.py
app/services/: shortener.py
tests/unit/: test_shortener.py
web/: package-lock.json
web/src/: App.tsx
web/src/api/: snip.ts
web/src/components/: ErrorBanner.tsx  ResultCard.tsx  ShortenForm.tsx
web/src/types/: api.ts
